# thistermination

./: Cargo.toml  README.md
src/: code_generation.rs  lib.rs  parse.rs  termination.rs  termination_full.rs  termination_no_debug.rs
tests/: default_behavior_test.rs  empty_enum_test.rs  fields_test.rs  format_args_test.rs  full_test.rs  mixed_args_test.rs  no_args_test.rs  no_debug_test.rs  thiserror_test.rs
