[package]
name = "thistermination"
version = "1.0.0"
authors = ["Lennard Kittner"]
edition = "2021"
description = "A library crate to add the Termination trait to error enums inspired by thiserror"
readme = "README.md"
repository = "https://github.com/LennardKittner/thistermination"
license = "MIT"
keywords = ["termination", "error-handling", "error", "derive"]
categories = ["rust-patterns"]

[badges]
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = "2.0.25"
quote = "1.0.29"
proc-macro2 = "1.0.63"
regex = "1.9.1"

[dev-dependencies]
thiserror = "1.0.43"
image = "0.24.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
